scripts/nullaway/original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8.txt
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyHolder.java:39: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyHolder.java:41: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyHolder.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyHolder.java:51: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/property/PropertyHolder.java:96: error: [NullAway] initializer method does not guarantee @NonNull fields readMethod (line 93), writeMethod (line 94) are initialized along all control-flow paths (remember to check for exceptions or early returns).
        public Builder (final String propertyName, final Class<?> clazz) {
               ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/guava/GuavaCache.java:61: error: [NullAway] initializer method does not guarantee @NonNull field expireAfterAccessTimeUnit (line 59) is initialized along all control-flow paths (remember to check for exceptions or early returns).
        public Builder () {
               ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/guava/PropertyCacheLoader.java:54: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:73: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:87: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:123: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/LeastRecentlyUsedCache.java:133: error: [NullAway] initializer method does not guarantee @NonNull field evictionStrategy (line 131) is initialized along all control-flow paths (remember to check for exceptions or early returns).
        public Builder () {
               ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/caches/lru/eviction/EvictBySize.java:13: error: [NullAway] initializer method does not guarantee @NonNull field map (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public EvictBySize (final int maxSize) {
           ^
    (see http://t.uber.com/nullaway )
../original/url36deadcd05_SCass1986_spawncamping_cyril_tgz-pJ8-org_stephen_hashmap_MainJ8/src/org/stephen/hashmap/config/DefaultValue.java:7: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this (null);
              ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
13 errors
